--- a/src/main/webapp/views/modal/employee_update_modal.html
+++ b/src/main/webapp/views/modal/employee_update_modal.html
@@ -7,6 +7,8 @@
         <div class="form-group">
             <label for="employee-name" class="control-label">Employee Name:</label>
             <input type="text" class="form-control" id="employee-name" ng-model="ctrl.employee.name">
+            <label for="employee-age" class="control-label">Age:</label>
+            <input type="number" class="form-control" id="employee-age" ng-model="ctrl.employee.age">
         </div>
         <div class="form-group">
             <label for="employee-email" class="control-label">Email:</label>
