--- a/src/main/webapp/views/employees.html
+++ b/src/main/webapp/views/employees.html
@@ -20,6 +20,10 @@
                     -
                     <input type="number" class="form-control" id="employee-age-to" ng-model="ctrl.filter.ageTo">
                 </div>
+                <div class="form-group">
+                    <label for="employee-job" class="control-label">Job:</label>
+                    <input type="text" class="form-control" id="employee-job" ng-model="ctrl.filter.job">
+                </div>
                 <button type="button" class="btn btn-default" ng-click="ctrl.filterEmployees(ctrl.filter)">Filter</button>
                 <button type="button" class="btn btn-default" ng-click="ctrl.resetFilter()">Reset</button>
             </form>
