--- a/src/main/webapp/views/employees.html
+++ b/src/main/webapp/views/employees.html
@@ -9,23 +9,22 @@
                     </div>
                 </div>
             </form>
-            <form class="form-inline">
-                <div class="form-group">
+            <form class="form-inline" name="filter_form">
+                <div class="form-group form-group-sm">
                     <label for="employee-name" class="control-label">Name:</label>
                     <input type="text" class="form-control" id="employee-name" ng-model="ctrl.filter.name">
-                </div>
-                <div class="form-group">
                     <label for="employee-age-from" class="control-label">Age:</label>
                     <input type="number" class="form-control" id="employee-age-from" ng-model="ctrl.filter.ageFrom">
                     -
                     <input type="number" class="form-control" id="employee-age-to" ng-model="ctrl.filter.ageTo">
-                </div>
-                <div class="form-group">
                     <label for="employee-job" class="control-label">Job:</label>
                     <input type="text" class="form-control" id="employee-job" ng-model="ctrl.filter.job">
+                    <label for="employee-city" class="control-label">City:</label>
+                    <input type="text" class="form-control" id="employee-city" ng-model="ctrl.filter.city">
                 </div>
-                <button type="button" class="btn btn-default" ng-click="ctrl.filterEmployees(ctrl.filter)">Filter</button>
-                <button type="button" class="btn btn-default" ng-click="ctrl.resetFilter()">Reset</button>
+
+                <button type="button" class="btn btn-sm btn-default" ng-click="ctrl.filterEmployees(ctrl.filter)">Filter</button>
+                <button type="button" class="btn btn-sm btn-default" ng-click="ctrl.resetFilter()">Reset</button>
             </form>
             <div class="table-responsive">
                 <table class="table table-hover">
