Added some styling

--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -1,12 +1,67 @@
+.body {
+    font-family: "Poppins", sans-serif;
+}
+.chat {
+    width: 900px;
+    display:flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+
+    border-radius: 4px 4px 4px 4px;
+    background: #fff;
+    padding: 5px;
+    position: relative;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+}
+.user-box {
+    width: 30%;
+    max-width: 30%;
+    height: inherit;
+}
+.user-box-header {
+    margin: 0.5em;
+}
+.users {
+    width: 100%;
+    max-width: 100%;
+}
+.users ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+.users li {
+    position: relative;
+    cursor: pointer;
+    background-color: #EEE;
+    margin: .5em;
+    padding: .3em 0;
+    height: 1.6em;
+    border-radius: 2px;
+}
+.users li:hover {
+    color: #607D8B;
+    background-color: #DDD;
+    left: .1em;
+}
+.users li div {
+    margin: 0.2em 0.8em;
+}
+.chat-box {
+    position: relative;
+    width: 70%;
+    max-width: 70%;;
+}
+.chat-box-header {
+    margin: 0.5em;
+}
 .messages {
     position: relative;
     height: 500px;
-    width: 600px;
-    overflow-y: scroll;
+    margin: 0.5em;
     overflow-x: hidden;
-}
-.chat {
-    
 }
 .chat-message {
     padding-top: 5px;
@@ -18,14 +73,64 @@
     max-width: 450px;
     word-wrap: break-word;
 }
+.message-form {
+    position: relative;
+    width: 100%;
+}
+.message-form mat-form-field {
+    width: 80%;
+}
+.message-form button {
+    width: 15%;
+}
 mat-card {
     padding-top: 10px;
     padding-bottom: 10px;
 }
 mat-card-title {
-    color: #666666;
+    font-size: 0.8em;
+    font-weight: bold;
+    color: #607D8B;
     margin-bottom: 5px;
 }
-mat-form-field {
-    width: 500px;
+.scrollbar {
+    overflow-y: hidden;
 }
+.scrollbar:hover {
+    overflow-y: auto;
+}
+.scrollbar::-webkit-scrollbar-track {
+	background-color: #DDD;
+}
+
+.scrollbar::-webkit-scrollbar {
+    width: 4px;
+	background-color: #DDD;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 1px;
+	background-color: #607D8B;
+}
+
+.form-wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column; 
+    justify-content: center;
+    width: 100%;
+    min-height: 100%;
+    padding: 20px;
+  }
+  
+  .introduceForm {
+    border-radius: 4px 4px 4px 4px;
+    background: #fff;
+    padding: 30px;
+    width: 90%;
+    max-width: 450px;
+    position: relative;
+    padding: 0px;
+    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    text-align: center;
+  }
