--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -38,6 +38,7 @@
                 <p class="message-text">
                     {{message.text}}
                 </p>
+                <div class="message-date" *ngIf="message.date">{{message.date | date:'shortTime':'':'ru'}}</div>
               </mat-card-content>
             </mat-card>
           </div>
