--- a/src/main/webapp/static/styles/styles.css
+++ b/src/main/webapp/static/styles/styles.css
@@ -52,6 +52,8 @@ html, body {
 }
 
 .frame {
+    display: flex;
+    flex-wrap: wrap;
     box-shadow: 0 0 8px rgba(0,0,0,0.2);
     padding: 10px;
     background-color: white;
@@ -104,4 +106,10 @@ img {
     width: 550px;
     max-width: 100%;
     max-height: 300px;
+}
+
+.chart-panel {
+    padding-left: 0px;
+    padding-right: 0px;
+    float: none;
 }
