Added support of BrowserUsageMarker

--- a/src/main/webapp/static/views/statistic.html
+++ b/src/main/webapp/static/views/statistic.html
@@ -26,8 +26,8 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">Pages Hits</div>
                     <div class="panel-body">
-                        <canvas id="radar" class="chart chart-radar"
-                                chart-data="ctrl.pages.data" chart-options="ctrl.pages.options" chart-labels="ctrl.pages.labels">
+                        <canvas id="bar" class="chart chart-bar"
+                                chart-data="ctrl.pages.data" chart-labels="ctrl.pages.labels">
                         </canvas>
                     </div>
                 </div>
