--- a/src/main/webapp/static/styles/styles.css
+++ b/src/main/webapp/static/styles/styles.css
@@ -52,8 +52,6 @@ html, body {
 }
 
 .frame {
-    display: flex;
-    flex-wrap: wrap;
     box-shadow: 0 0 8px rgba(0,0,0,0.2);
     padding: 10px;
     background-color: white;
@@ -112,4 +110,62 @@ img {
     padding-left: 0px;
     padding-right: 0px;
     float: none;
+}
+
+input[type=checkbox]{
+    height: 0;
+    width: 0;
+    visibility: hidden;
+}
+
+#switch_label {
+    cursor: pointer;
+    text-indent: -9999px;
+    width: 60px;
+    height: 30px;
+    background: grey;
+    display: block;
+    border-radius: 30px;
+    position: relative;
+}
+
+#switch_label:after {
+    content: '';
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 24px;
+    height: 24px;
+    background: #fff;
+    border-radius: 24px;
+    transition: 0.3s;
+}
+
+input:checked + #switch_label {
+    background: #97bbcd;
+}
+
+input:checked + #switch_label:after {
+    left: calc(100% - 3px);
+    transform: translateX(-100%);
+}
+
+#switch_label:active:after {
+    width: 40px;
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.switch-row {
+    align-items: center;
+    margin: 15px;
+}
+
+.switch-row-label {
+    font-size: 16px;
+    font-weight: 600;
+    margin-left: 10px;
 }
