--- a/src/main/webapp/static/views/modal/employee_create_modal.html
+++ b/src/main/webapp/static/views/modal/employee_create_modal.html
@@ -18,7 +18,7 @@
         </div>
         <div class="form-group">
             <label for="employee-hiredate" class="control-label">HireDate:</label>
-            <input type="text" class="form-control" id="employee-hiredate" ng-model="ctrl.employee.hireDate">
+            <input type="date" class="form-control" id="employee-hiredate" ng-model="ctrl.employee.hireDate">
             <label for="employee-job" class="control-label">Job:</label>
             <input type="text" class="form-control" id="employee-job" ng-model="ctrl.employee.job">
             <label for="employee-salary" class="control-label">Salary:</label>
