--- a/src/main/webapp/static/views/statistic.html
+++ b/src/main/webapp/static/views/statistic.html
@@ -48,6 +48,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-6">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">AverageInvocationTime [ms]</div>
+                        <div class="panel-body">
+                            <canvas id="base" class="chart-horizontal-bar"
+                                    chart-data="ctrl.invocation.data" chart-labels="ctrl.invocation.labels" >
+                            </canvas>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
